# gui-python-pyside6-qt6

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/data/: CNAME  requirements-doc.txt
docs/source/: conf.py  index.rst  pyside6-qml-kirigami.rst  pyside6-qml.rst  pyside6-widgets.rst  tips.rst  tutorials.rst
src/bundles/_pyinstaller/: linux.sh  windows.bat
src/data/: br.com.justcode.Exaple.desktop
src/pyside6-qml/applicationwindow/: MainWindow.py  MainWindow.qml
src/pyside6-qml/menubar/: MainWindow.py  MainWindow.qml
src/pyside6-qml/signals-and-slots/: MainWindow.py  MainWindow.qml
src/pyside6-qml/stacklayout/: MainWindow.py  MainWindow.qml
src/pyside6-qml/style/: MainWindow.py  MainWindow.qml  resources_rc.py
src/pyside6-qml/tabbar/: MainWindow.py  MainWindow.qml
src/pyside6-qml/toolbar/: MainWindow.py  MainWindow.qml
src/pyside6-widgets/drag-and-drop/: MainWindow.py
src/pyside6-widgets/qcalendarwidget/: MainWindow.py
src/pyside6-widgets/qcheckbox/: MainWindow.py
src/pyside6-widgets/qcombobox/: MainWindow.py
src/pyside6-widgets/qdatetimeedit/: MainWindow.py
src/pyside6-widgets/qdial/: MainWindow.py
src/pyside6-widgets/qfiledialog-file/: MainWindow.py
src/pyside6-widgets/qfiledialog-folder/: MainWindow.py
src/pyside6-widgets/qfiledialog-save/: MainWindow.py
src/pyside6-widgets/qformlayout/: MainWindow.py
src/pyside6-widgets/qhboxlayout/: MainWindow.py
src/pyside6-widgets/qlabel/: MainWindow.py
src/pyside6-widgets/qlcdnumber/: MainWindow.py
src/pyside6-widgets/qlistview/: MainWindow.py
src/pyside6-widgets/qlistwidget/: MainWindow.py
src/pyside6-widgets/qlocale/: MainWindow.py
src/pyside6-widgets/qmainwindow/: MainWindow.py
src/qtsql/mysql/: main.py
(+128 files in other folders)
